[package]
name = "closures-futures-async"
version = "0.1.0"
authors = ["Alistair A. Israel <aisrael@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
simplelog = "0.7"
tokio = { version = "0.2", features = ["full"] }
